cmake_minimum_required(VERSION 3.16)
project(Leetcode_Solutions)

set(CMAKE_CXX_STANDARD 17)

# Add all problem directories manually or with a loop
add_subdirectory(Neetcode/ArraysAndHashing/Problem217)
add_subdirectory(Neetcode/ArraysAndHashing/Problem242)
add_subdirectory(Neetcode/ArraysAndHashing/Problem1)
add_subdirectory(Neetcode/ArraysAndHashing/Problem49)

